update OSCP prep post

--- a/_posts/2021-03-10-oscp-prep.md
+++ b/_posts/2021-03-10-oscp-prep.md
@@ -42,10 +42,10 @@ The following list of VM is inspired from [TJ_Null's list of OSCP-like VMs](http
 
 #### Linux
 
-Machine         | Difficulty | Status  | WU                                                 |
-----------------|------------|---------|----------------------------------------------------|
+Machine         | Difficulty | Status  | WU                                                     |
+----------------|------------|---------|--------------------------------------------------------|
 **Lame**        | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/htb-lame)       |
-**Beep**        | Easy       | &#9989; |                                                    |
+**Beep**        | Easy       | &#9989; | ~~link~~                                               |
 **Blocky**      | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/htb-blocky)     |
 **Mirai**       | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/htb-mirai)      |
 **Shocker**     | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/htb-shocker)    |
@@ -84,13 +84,13 @@ Machine         | Difficulty | Status  | WU                                     
 Machine         | Difficulty | Status   | WU                                                   |
 ----------------|------------|----------|------------------------------------------------------|
 **Legacy**      | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-legacy)   |
-**Blue**        | Easy       | &#9989;  |  |
+**Blue**        | Easy       | &#9989;  |  ~~link~~                                            |
 **Devel**       | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-devel)    |
 **Optimum**     | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-optimum/) |
 **Granny**      | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-granny/)  |
-**Artic**       | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-artic)    |
+**Arctic**       | Easy       | &#9989; | [link](http://127.0.0.1:4000/posts/htb-arctic/)    |
 **Grandpa**     | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-grandpa/) |
-**Bounty**      | Easy       | &#10060; | |
+**Bounty**      | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-bounty/)  |
 **Jerry**       | Easy       | &#10060; | |
 **Forest**      | Easy       | &#10060; | |
 **Bastion**     | Easy       | &#10060; | |
