publishing Jerry WU!

--- a/_posts/2021-03-10-oscp-prep.md
+++ b/_posts/2021-03-10-oscp-prep.md
@@ -88,10 +88,10 @@ Machine         | Difficulty | Status   | WU                                    
 **Devel**       | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-devel)    |
 **Optimum**     | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-optimum/) |
 **Granny**      | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-granny/)  |
-**Arctic**       | Easy       | &#9989; | [link](http://amirr0r.github.io/posts/htb-arctic/)    |
+**Arctic**      | Easy       | &#9989;  | [link](http://amirr0r.github.io/posts/htb-arctic/)   |
 **Grandpa**     | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-grandpa/) |
 **Bounty**      | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-bounty/)  |
-**Jerry**       | Easy       | &#10060; | |
+**Jerry**       | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-jerry/)   |
 **Forest**      | Easy       | &#10060; | |
 **Bastion**     | Easy       | &#10060; | |
 **Active**      | Easy       | &#10060; | |
