adding some links

--- a/_posts/2021-08-15-htb-jerry.md
+++ b/_posts/2021-08-15-htb-jerry.md
@@ -134,3 +134,9 @@ user.txt
 root.txt
 04a8b36e1545a455393d067e772fe90e
 ```
+
+___
+
+## Interesting links
+
+- [C2 - SILENTTRINITY](https://github.com/byt3bl33d3r/SILENTTRINITY)
