publish Bastion WU

--- a/_posts/2021-03-10-oscp-prep.md
+++ b/_posts/2021-03-10-oscp-prep.md
@@ -93,7 +93,7 @@ Machine         | Difficulty | Status   | WU                                    
 **Bounty**      | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-bounty/)  |
 **Jerry**       | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-jerry/)   |
 **Forest**      | Easy       | &#10060; | |
-**Bastion**     | Easy       | &#10060; | |
+**Bastion**     | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-bastion/)   |
 **Active**      | Easy       | &#10060; | |
 **Buff**        | Easy       | &#10060; | |
 **Servmon**     | Easy       | &#10060; | |
