publishing Remote WU

--- a/_posts/2021-03-10-oscp-prep.md
+++ b/_posts/2021-03-10-oscp-prep.md
@@ -97,7 +97,7 @@ Machine         | Difficulty | Status   | WU                                    
 **Active**      | Easy       | &#10060; | |
 **Buff**        | Easy       | &#10060; | |
 **Servmon**     | Easy       | &#10060; | |
-**Remote**      | Easy       | &#10060; | |
+**Remote**      | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/htb-remote/)   |
 **Bastard**     | Medium     | &#10060; | |
 **Silo**        | Medium     | &#10060; | |
 **Chatterbox**  | Medium     | &#10060; | |
