HTB Forest done (excellent box) !

--- a/_posts/2021-03-10-oscp-prep.md
+++ b/_posts/2021-03-10-oscp-prep.md
@@ -92,8 +92,8 @@ Machine         | Difficulty | Status   | WU                                    
 **Grandpa**     | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-grandpa/) |
 **Bounty**      | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-bounty/)  |
 **Jerry**       | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-jerry/)   |
-**Forest**      | Easy       | &#10060; | |
-**Bastion**     | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-bastion/)   |
+**Forest**      | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-forest/)  |
+**Bastion**     | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-bastion/) |
 **Active**      | Easy       | &#10060; | |
 **Buff**        | Easy       | &#10060; | |
 **Servmon**     | Easy       | &#10060; | |
