--- a/_posts/2021-03-10-oscp-prep.md
+++ b/_posts/2021-03-10-oscp-prep.md
@@ -95,9 +95,9 @@ Machine         | Difficulty | Status   | WU                                    
 **Forest**      | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-forest/)  |
 **Bastion**     | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-bastion/) |
 **Active**      | Easy       | &#10060; | |
-**Buff**        | Easy       | &#10060; | |
+**Buff**        | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-buff/)    |
 **Servmon**     | Easy       | &#10060; | |
-**Remote**      | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/htb-remote/)   |
+**Remote**      | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-remote/)  |
 **Bastard**     | Medium     | &#10060; | |
 **Silo**        | Medium     | &#10060; | |
 **Chatterbox**  | Medium     | &#10060; | |
