--- a/_posts/2021-03-10-oscp-prep.md
+++ b/_posts/2021-03-10-oscp-prep.md
@@ -96,7 +96,7 @@ Machine         | Difficulty | Status   | WU                                    
 **Bastion**     | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-bastion/) |
 **Active**      | Easy       | &#10060; | |
 **Buff**        | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-buff/)    |
-**Servmon**     | Easy       | &#10060; | |
+**Servmon**     | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-servmon/) |
 **Remote**      | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-remote/)  |
 **Bastard**     | Medium     | &#10060; | |
 **Silo**        | Medium     | &#10060; | |
