--- a/_posts/2021-03-10-oscp-prep.md
+++ b/_posts/2021-03-10-oscp-prep.md
@@ -94,7 +94,7 @@ Machine         | Difficulty | Status   | WU                                    
 **Jerry**       | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-jerry/)   |
 **Forest**      | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-forest/)  |
 **Bastion**     | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-bastion/) |
-**Active**      | Easy       | &#10060; | |
+**Active**      | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-active/)  |
 **Buff**        | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-buff/)    |
 **Servmon**     | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-servmon/) |
 **Remote**      | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-remote/)  |
