update oscp prep post

--- a/_posts/2021-03-10-oscp-prep.md
+++ b/_posts/2021-03-10-oscp-prep.md
@@ -98,7 +98,7 @@ Machine         | Difficulty | Status   | WU                                    
 **Buff**        | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-buff/)    |
 **Servmon**     | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-servmon/) |
 **Remote**      | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-remote/)  |
-**Bastard**     | Medium     | &#10060; | |
+**Bastard**     | Medium     | &#9989;  | ~~link~~                                             |
 **Silo**        | Medium     | &#10060; | |
 **Chatterbox**  | Medium     | &#10060; | |
 **SecNotes**    | Medium     | &#10060; | |
