update oscp prep post

--- a/_posts/2021-03-10-oscp-prep.md
+++ b/_posts/2021-03-10-oscp-prep.md
@@ -99,7 +99,7 @@ Machine         | Difficulty | Status   | WU                                    
 **Servmon**     | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-servmon/) |
 **Remote**      | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-remote/)  |
 **Bastard**     | Medium     | &#9989;  | ~~link~~                                             |
-**Silo**        | Medium     | &#10060; | |
+**Silo**        | Medium     | &#9989;  | **TODO**                                             |
 **Chatterbox**  | Medium     | &#10060; | |
 **SecNotes**    | Medium     | &#10060; | |
 **Fuse**        | Medium     | &#10060; | |
