update oscp prep post

--- a/_posts/2021-03-10-oscp-prep.md
+++ b/_posts/2021-03-10-oscp-prep.md
@@ -147,10 +147,11 @@ ___
 
 - <u>First part of the exam</u>: 23 hours and 45 minutes to compromise multiple machines.
     + Buffer Overflow machine: 25 points
-    + A machine of 10 points
-    + 3 other machines of 20 points each
+    + Another machine of 25 points
+    + 1 machine of 10 points
+    + 2 machines of 20 points each
     + Doing the lab report: 5 bonus points
-        * no less than ten (10) machines in the labs and document [Source](https://help.offensive-security.com/hc/en-us/articles/360046787731-Penetration-Testing-with-Kali-Linux-Reporting#how-many-machines-should-the-lab-report-contain)
+        * no less than ten (10) machines in the labs and document course exercises [Source](https://help.offensive-security.com/hc/en-us/articles/360046787731-Penetration-Testing-with-Kali-Linux-Reporting#how-many-machines-should-the-lab-report-contain)
 
 > 70 points (out of a total of 100) are required to pass the exam.
 
