--- a/_posts/2021-03-10-oscp-prep.md
+++ b/_posts/2021-03-10-oscp-prep.md
@@ -1,7 +1,7 @@
 ---
-title: How do I prepare for the OSCP in 2021?
+title: How do I prepare for the OSCP?
 date: 2021-03-10 15:38:28 +0100
-categories: [Miscellaneous]
+categories: [Miscellaneous, Certifications]
 tags: [oscp-prep]
 image: /assets/img/oscp/offsec-black.png
 pin: true
